name:                grec
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/odr/pers-bk#readme
license:             BSD3
license-file:        LICENSE
author:              Dmitry Olshansky
maintainer:          olshanskydr@gmail.com
copyright:           Dmitry Olshansky
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:      Data.Type.Grec
                      , Data.Type.Grec.ConvGrec
                      -- , Data.Type.Grec.ConvList
                      , Data.Type.Grec.Convert
                      , Data.Type.Grec.FieldsGrec
                      -- , Data.Type.Grec.Grec
                      , Data.Type.Grec.Lens
                      -- , Data.Type.Grec.GrecLens
                      , Data.Type.Grec.Type

  -- other-modules:        Data.Type.Grec.Internal.GGrecList

  default-extensions:   DataKinds
                      , TypeOperators
                      , KindSignatures
                      , OverloadedStrings
                      , OverloadedLabels
                      , TypeFamilies
                      , ScopedTypeVariables
                      , PolyKinds
                      , MultiParamTypeClasses
                      , FlexibleContexts
                      , FlexibleInstances
                      , MagicHash

  build-depends:       base >= 4.7 && < 5
                      , tagged
                      , singletons
                      , ghc-prim
                      , microlens
                      -- , lens-simple
                      , containers
                      , template-haskell
                      , text
                      , aeson
  default-language:    Haskell2010

executable grec-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  default-extensions: TypeOperators
                      , DataKinds
                      , ScopedTypeVariables
                      , OverloadedStrings
                      , MagicHash
                      , MultiParamTypeClasses
                      , FlexibleInstances
                      , OverloadedLabels
                      , DeriveGeneric
                      -- , TypeFamilies
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fprint-potential-instances
                      --  -fplugin=Perst.Plugin -plugin-package perst-plugin
  build-depends:       base
                      , grec
                      , singletons
                      , ghc-prim
                      , microlens
                      , tagged
  default-language:    Haskell2010

test-suite pers-bk-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                      , grec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/odr/perst
