name:                gtree
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/odr/gtree#readme
license:             BSD3
license-file:        LICENSE
author:              Dmitry Olshansky
maintainer:          olshanskydr@gmail.com
copyright:           Dmitry Olshansky
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Type.GrecTree
                      , Data.Type.GrecTree.BTree
                      , Data.Type.GrecTree.Convert
                      , Data.Type.GrecTree.Grec
                      , Data.Type.GrecTree.Lens
                      , Data.Type.GrecTree.Delete
  default-extensions:   DataKinds
                      , TypeOperators
                      , KindSignatures
                      -- , OverloadedStrings
                      -- , OverloadedLabels
                      , TypeFamilies
                      , ScopedTypeVariables
                      -- , PolyKinds
                      , MultiParamTypeClasses
                      , FlexibleContexts
                      , TypeSynonymInstances
                      , FlexibleInstances
                      -- , MagicHash
  build-depends:       base >= 4.7 && < 5
                      , tagged
                      , singletons
                      , template-haskell
                      , microlens
                      , text
  default-language:    Haskell2010

executable gtree-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O0
  -- -Wall
  default-extensions:   DataKinds
                      , TypeOperators
                      , KindSignatures
                      -- , OverloadedStrings
                      -- , OverloadedLabels
                      , TypeFamilies
                      , ScopedTypeVariables
                      -- , PolyKinds
                      , MultiParamTypeClasses
                      , FlexibleContexts
                      , TypeSynonymInstances
                      , FlexibleInstances
  build-depends:       base
                     , gtree
                     , singletons
                     , template-haskell
                     , tagged
                     , microlens
  default-language:    Haskell2010

-- test-suite gtree-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , gtree
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/odr/gtree
