name:                lstt
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/odr/pers-bk#readme
license:             BSD3
license-file:        LICENSE
author:              Dmitry Olshansky
maintainer:          olshanskydr@gmail.com
copyright:           Dmitry Olshansky
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:      Data.Type.Lstt
                      -- , Data.Type.Bst.Internal

  default-extensions:   DataKinds
                      , TypeOperators
                      , KindSignatures
                      , OverloadedStrings
                      , OverloadedLabels
                      , TypeFamilies
                      , ScopedTypeVariables
                      , PolyKinds
                      , MultiParamTypeClasses
                      , FlexibleContexts
                      , FlexibleInstances
                      , FlexibleInstances
                      , MagicHash

  build-depends:       base >= 4.7 && < 5
                      -- , tagged
                      , singletons
                      , ghc-prim
                      , microlens
                      , bookkeeper
  default-language:    Haskell2010

executable bstt-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  default-extensions: TypeOperators
                      , DataKinds
                      , ScopedTypeVariables
                      , OverloadedStrings
                      , MagicHash
                      -- , KindSignatures
                      -- , OverloadedLabels
                      -- , TypeFamilies
                      -- , FlexibleInstances
                      -- , FlexibleInstances
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                      , lstt
                      , singletons
                      , ghc-prim
                      , microlens
  default-language:    Haskell2010

test-suite pers-bk-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                      , lstt
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/odr/perst
