name:                pers-bk
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/odr/pers-bk#readme
license:             BSD3
license-file:        LICENSE
author:              Dmitry Olshansky
maintainer:          olshanskydr@gmail.com
copyright:           Dmitry Olshansky
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pers.Database.Types
                      , Pers.Types
                      , Pers.Database.DDL
                      , Data.Type.KSet

  extensions:           DataKinds
                      , TypeOperators
                      , KindSignatures
                      , OverloadedStrings
                      , OverloadedLabels
                      , TypeFamilies
                      , ScopedTypeVariables
                      , PolyKinds
                      , MultiParamTypeClasses
                      , FlexibleContexts
                      , FlexibleInstances

  build-depends:       base >= 4.7 && < 5
                      , bookkeeper
                      -- , type-level-sets
                      , ghc-prim
                      , transformers
                      , text
                      , exceptions
                      , text-format
  default-language:    Haskell2010

executable pers-bk-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pers-bk
  default-language:    Haskell2010

test-suite pers-bk-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pers-bk
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/odr/pers-bk
