name:                perst-plugin
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/odr/perst-plugin#readme
license:             BSD3
license-file:        LICENSE
author:              Dmitry Olshansky
maintainer:          olshanskydr@gmail.com
copyright:           Dmitry Olshansky
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Perst.Plugin
  build-depends:       base >= 4.7 && < 5
                      , ghc
                      , time
  default-language:    Haskell2010

-- executable perst-plugin-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , perst-plugin
--   default-language:    Haskell2010

test-suite perst-plugin-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , perst-plugin
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/odr/perst-plugin
