name:                perst-servant
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/odr/perst-servant#readme
license:             BSD3
license-file:        LICENSE
author:              Dmitry Olshansky
maintainer:          olshanskydr@gmail.com
copyright:           Dmitry Olshansky
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Perst.Servant.API
  default-extensions:   DataKinds
                      , TypeOperators
                      , KindSignatures
                      , OverloadedStrings
                      , TypeFamilies
                      , ScopedTypeVariables
                      , PolyKinds
                      , MultiParamTypeClasses
                      , FlexibleContexts
                      , FlexibleInstances
                      , ConstraintKinds
  build-depends:       base >= 4.7 && < 5
                      , servant-server
                      , servant-client
                      , text
                      , time
                      , perst
                      , grec
                      , singletons
                      , ghc-prim
                      , transformers
                      , tagged

  default-language:    Haskell2010

executable perst-servant-exe
  hs-source-dirs:      app
  main-is:             Server.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O0
  build-depends:       base
                     , perst-servant
                     , perst-test-data
                    --  , servant
                     , base-compat
                     , aeson-compat
                     , aeson
                     , attoparsec
                     , bytestring
                     , time
                     , wai
                     , warp
                     , lucid
                     , directory
                     , mtl
                     , blaze-html
                     , string-conversions
                     , http-media
                     , blaze-markup
                     , servant-server
                     , tagged
                     , perst
                     , ghc-prim
  default-language:    Haskell2010

executable perst-client-exe
  hs-source-dirs:      app
  main-is:             Client.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O0
  build-depends:       base
                     , perst-servant
                     , perst-test-data
                     , http-client
                     , grec
                     , servant-server
                     , servant
                     , base-compat
                     , aeson-compat
                     , aeson
                     , attoparsec
                     , bytestring
                     , time
                     , wai
                     , warp
                     , lucid
                     , directory
                     , mtl
                     , blaze-html
                     , string-conversions
                     , http-media
                     , blaze-markup
                     , servant-client
                     , tagged
                     , perst
                     , ghc-prim
  default-language:    Haskell2010

test-suite perst-servant-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , perst-servant
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/odr/perst-servant
