name:                perst-sqlite
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/odr/perst#readme
license:             BSD3
license-file:        LICENSE
author:              Dmitry Olshansky
maintainer:          olshanskydr@gmail.com
copyright:           Dmitry Olshansky
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:      Perst.Database.Sqlite

  default-extensions:   DataKinds
                      -- , TypeOperators
                      -- , KindSignatures
                      , OverloadedStrings
                      -- , OverloadedLabels
                      , TypeFamilies
                      , ScopedTypeVariables
                      -- , PolyKinds
                      , MultiParamTypeClasses
                      , FlexibleContexts
                      , FlexibleInstances
                      -- , FlexibleInstances

  build-depends:       base >= 4.7 && < 5
                      , grec
                      , perst
                      , direct-sqlite
                      , singletons
                      , ghc-prim
                      , bytestring
                      , transformers
                      , text
                      , exceptions
                      , text-format
  default-language:    Haskell2010

  -- executable perst-sqlite-exe
  -- hs-source-dirs:      app
  -- main-is:             Main.hs
  -- -- other-modules:      Customer
  -- --                     , Order
  -- --                     , Article
  -- --                     , CustomerTree
  --
  -- -- default-extensions: TypeOperators
  -- --                     , DataKinds
  -- --                     , ScopedTypeVariables
  -- --                     , OverloadedStrings
  --                     -- , KindSignatures
  --                     -- , OverloadedLabels
  --                     -- , TypeFamilies
  --                     -- , PolyKinds
  --                     -- , MultiParamTypeClasses
  --                     -- , FlexibleContexts
  --                     -- , FlexibleInstances
  --                     -- , FlexibleInstances
  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O0
  --                     -- -v2
  --                     --  -fplugin=Perst.Plugin -plugin-package perst-plugin
  -- build-depends:       base
  --                   --  , perst
  --                   --  , perst-sqlite
  --                   -- --  , perst-test-data
  --                   --  , grec
  --                   --  , text
  --                   --  , exceptions
  --                   --  , tagged
  --                   --  , singletons
  -- default-language:    Haskell2010
  -- -- other-modules:   Customer, Order, Article, CustomerTree

-- test-suite pers-bk-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , perst
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/odr/perst
