name:                perst
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/odr/perst#readme
license:             BSD3
license-file:        LICENSE
author:              Dmitry Olshansky
maintainer:          olshanskydr@gmail.com
copyright:           Dmitry Olshansky
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Perst.Database.Types
                      , Perst.Types
                      , Perst.Database.DDL

  extensions:           DataKinds
                      , TypeOperators
                      , KindSignatures
                      , OverloadedStrings
                      , TypeFamilies
                      , ScopedTypeVariables
                      , PolyKinds
                      , MultiParamTypeClasses
                      , FlexibleContexts
                      , FlexibleInstances
                      , ConstraintKinds
                      , MagicHash

  build-depends:       base >= 4.7 && < 5
                      , grec
                      -- , type-level-bst
                      -- , type-level-sets
                      , ghc-prim
                      , transformers
                      , text
                      , exceptions
                      , text-format
                      , singletons
  default-language:    Haskell2010

executable perst-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , perst
  default-language:    Haskell2010

test-suite perst-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , perst
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/odr/perst
